@@ -16,8 +16,17 @@ namespace Castle.MicroKernel.Tests.ClassComponents
 {
 	using System;
 
+	/// <summary>
+	/// 
+	/// </summary>
 	public class CustomerImpl2 : CustomerImpl
 	{
+		/// <summary>
+		/// 
+		/// </summary>
+		/// <param name="name"></param>
+		/// <param name="address"></param>
+		/// <param name="age"></param>
 		public CustomerImpl2(String name, String address, int age)
 		{
 			Name = name;
